@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2013,v 1.4404 2013/12/07 09:05:11 obache Exp $
+$NetBSD: CHANGES-2013,v 1.4405 2013/12/07 09:09:30 obache Exp $
 
 Changes to the packages collection and infrastructure in 2013:
 
@@ -6468,3 +6468,4 @@ Changes to the packages collection and infrastructure in 2013:
 	Removed security/ruby-roauth [obache 2013-12-07]
 	Removed textproc/ruby-xmlscan [obache 2013-12-07]
 	Removed net/ruby-tweetstream [obache 2013-12-07]
+	Removed www/ruby-httpclient [obache 2013-12-07]
